--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta http-equiv="author" content="Bartłomiej Tuchowski">
-        <title>TwitchTV_App<</title>
+        <title>TwitchTV_App</title>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
