commenting after API changes. No user search from now.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                     <div class="col-1-of-3">
                         <button class="container__buttons--all">all</button>
                     </div>
+                    <!-- TODO: This is currently not working. API has changed, so I can only make some real requests to Twitch Api.
                     <div class="container__input-box-center">
                         <input type="text" class="container__input" name="streamer-name" placeholder="Enter streamer name">
                     </div>
+                    -->
               </div>
             </div>
             <div id="content"></div>
